--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Header -->
-    <header class="site-header">
+    <header class="page-header">
       <div class="container main-nav">
         <a href="./index.html" lang="en" class="logo link"><span class="accent">Web</span>Studio</a>
         <nav class="site-nav">
